modificaciones 2021-11-26 correcciones proceso de Pago.javainicializo las variables de ineteres_amortizado y capital_amortizado correccion de error de compilacion Multidex sobrepase el limite de arquitectura de 65000 metodos. he agregado la funcionalidad del multidex a la app para poder sobrepasar este error. agrego la libreria para trabajar con el PDF

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/Theme.TePrestoOnline">
         <activity android:name=".Pago"></activity>
         <activity android:name=".listado_prestamo"></activity>
-        <activity android:name=".listado_prestamos"></activity>
+        <!--<activity android:name=".listado_prestamos"></activity>-->
+        android:name="androidx.multidex.listado_prestamos" >
         <activity android:name=".mantenimiento_clientes" />
         <activity android:name=".Inicio" />
         <activity android:name=".MainActivity">
