--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.teprestoonline">
 
+
+    <!-- Secion de permisos de la app -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,11 +20,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TePrestoOnline">
-        <activity android:name=".Pago"></activity>
-        <activity android:name=".listado_prestamo"></activity>
-        <!--<activity android:name=".listado_prestamos"></activity>-->
-        android:name="androidx.multidex.listado_prestamos" >
-        <activity android:name=".mantenimiento_clientes" />
+        android:requestLegacyExternalStorage="true"
+
+        <activity android:name=".Pago" />
+
+        <activity android:name=".listado_prestamo" />
+        <activity android:name=".mantenimiento_clientes" /> <!-- <activity android:name=".listado_prestamos"></activity> -->
         <activity android:name=".Inicio" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -22,6 +34,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
     </application>
+
 
 </manifest>
