--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -49,4 +53,5 @@ dependencies {
     compile files('libs/droidText.0.4.jar')
 
     implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
